# wg

./: Cargo.toml  config.json  flake.nix  shell.nix
src/: log_setup.rs  main.rs  types.rs
wg/: Cargo.toml
wg-proto/: Cargo.toml
wg-proto/src/: config.rs  consts.rs  errors.rs  lib.rs  operations.rs  utils.rs
wg-proto/src/crypto/: blake2.rs  chacha20poly1305.rs  mod.rs  tai64.rs  x25519.rs
wg-proto/src/data_types/: buffer.rs  chunk.rs  handshake_initiation.rs  handshake_response.rs  message_types.rs  mod.rs  packet_data.rs  state.rs  traits.rs
wg-proto/src/ip/: ipv4.rs  ipv6.rs  mod.rs  protocols.rs
wg-rust-crypto/: Cargo.toml
wg-rust-crypto/src/: blake2.rs  chacha20poly1305.rs  lib.rs  tai64.rs  x25519.rs
wg/src/: log_setup.rs  main.rs
