[package]
name = "tun_experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tun = { version = "0.7.10", features = ["async"] }
packet = "0.1.4"

env_logger = "0.11"
log = "0.4.25"

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

[profile.release]
overflow-checks = true
incremental = false
codegen-units = 1
opt-level = 3
debug = "full"
strip = true
lto = true
