[package]
name = "tun_experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
mio = { version = "1.0.3", features = ["net", "os-ext", "os-poll"] }
tun = "0.7.10"
# packet = "0.1.4"

# env_logger = "0.11"
# log = "0.4.25"

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

[profile.release]
overflow-checks = true
incremental = false
codegen-units = 1
opt-level = 3
debug = "full"
strip = true
lto = true
