[package]
name = "tun_experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
# Networking
tokio = { version = "1.43.0", features = ["full"] }
tun = { version = "0.7.10", features = ["async"] }
packet = "0.1.4"

# Logging
log = "0.4.25"
pretty_env_logger = "0.5.0"

# Error handling
anyhow = "1.0.95"

# Cryptography
# Noise protocol
# noise-protocol = "0.2.0"
# noise-rust-crypto = "0.6.2"

# Serialization
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

# Ctrl-C handling
ctrlc2 = { version = "3.5.9", features = ["tokio", "termination"] }
rand = "0.8.5"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
chacha20poly1305 = "0.10.1"
blake2 = "0.10.6"
base64 = "0.22.1"
tai64 = "4.1.0"

[profile.release]
overflow-checks = true
incremental = false
codegen-units = 1
opt-level = 3
debug = "full"
strip = true
lto = true
