[package]
name = "wg"
version = "0.1.0"
edition = "2021"
description = "WireGuard implementation in Rust"

[dependencies]
wg-rust-crypto = { path = "../wg-rust-crypto" }
wg-proto = { path = "../wg-proto" }

# Networking
tokio = { version = "1.43.0", features = ["full"] }
tun = { version = "0.7.10", features = ["async"] }
# packet = "0.1.4"

# Logging
log = "0.4.25"
pretty_env_logger = "0.5.0"

# Error handling
anyhow = "1.0.95"

# Serialization
# serde = { version = "1.0.217", features = ["derive"] }
# serde_json = "1.0.135"

# Ctrl-C handling
ctrlc2 = { version = "3.5.9", features = ["tokio", "termination"] }

# Base64 encoding
base64 = "0.22.1"
# Random number generation
rand = "^0.8"
