[package]
name = "wg"
version = "0.1.0"
edition = "2021"
description = "WireGuard implementation in Rust"

[dependencies]
io-uring = "0.6"
tun = "0.7.10"

# Logging
log = "0.4.25"
pretty_env_logger = "0.5.0"

# Error handling
anyhow = "1.0.95"

num_cpus = "1.16.0"
threadpool = "1.8.1"
slab = "0.4.9"
libc = "0.2.169"
